Display contact form in the contact page

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,12 @@
 {
     "require": {
         "silex/silex": "~1.2",
-        "twig/twig": "~1.8"
+        "twig/twig": "~1.8",
+        "symfony/twig-bridge": "~2.3",
+        "symfony/form": "~2.3",
+        "symfony/validator": "~2.3",
+        "symfony/config": "~2.3",
+        "symfony/translation": "~2.3"
+
     }
 }
