Added Swift mailer service provider

--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
         "symfony/form": "~2.3",
         "symfony/validator": "~2.3",
         "symfony/config": "~2.3",
-        "symfony/translation": "~2.3"
+        "symfony/translation": "~2.3",
+        "swiftmailer/swiftmailer": ">=4.1.2,<4.2-dev"
 
     }
 }
